--- a/0x00-Webpack/task_1/public/index.html
+++ b/0x00-Webpack/task_1/public/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Debounce Counter</title>
+    <title>Counter with Debounce</title>
 </head>
 <body>
-    <script src="./bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
