--- a/0x00-Webpack/task_1/public/index.html
+++ b/0x00-Webpack/task_1/public/index.html
@@ -6,6 +6,6 @@
     <title>Counter with Debounce</title>
 </head>
 <body>
-    <script src="bundle.js"></script>
+    <script src="./bundle.js"></script>
 </body>
 </html>
